--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,15 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "framer-motion": "^10.15.0",
+    "pwnedpasswords": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
